Making admin page more responsive inc. only showing item name + buttons on smaller screens in table; fixing issue with admin nav tab highlighting according to URL; adding edit and delete product categories options

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -44,6 +44,7 @@
         border: 2px solid lightgrey;
         height: 75vh;
         min-height: 400px;
+        min-width: 428px;
         overflow-x: hidden;
         overflow-y: auto;
         padding: 10px;
@@ -109,10 +110,31 @@
                         }
                     }
         
-                    td {
+                    td, th {
+                        flex: 5;
                         overflow-x: hidden;
                         text-overflow: ellipsis;
                         white-space: nowrap;
+
+                        &:first-child {
+                            @media (max-width: 992px) {
+                                flex: 2;
+                            }
+                        }
+
+                        &:nth-last-child(-n+2) {
+                            flex: 3;
+
+                            @media (max-width: 992px) {
+                                flex: 1;
+                            }
+                        }
+                        
+                        &:not(:first-child):not(:nth-last-child(-n+2)) {
+                            @media (max-width: 992px) {
+                                display: none;
+                            }
+                        }
                     }
                 }
             }
